[gd_scene load_steps=5 format=3 uid="uid://daqv7l03t2hwv"]

[ext_resource type="Script" path="res://Objects/spring.gd" id="1_cjmvo"]
[ext_resource type="Texture2D" uid="uid://d32ohn4ew0k3o" path="res://Assets/Art/spring.png" id="1_hdxkw"]
[ext_resource type="AudioStream" uid="uid://bo7c5nio0oobo" path="res://Assets/Sounds/spring.wav" id="3_8dayi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gcs5m"]
size = Vector2(30, 10)

[node name="Spring" type="Area2D"]
collision_layer = 0
collision_mask = 14
script = ExtResource("1_cjmvo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hdxkw")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gcs5m")

[node name="SpringSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8dayi")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
